# sp_det_RCNN

./: .env  .gitignore  README.md  main.ipynb  mask_rcnn_R_50_FPN_3x.yaml  pyproject.toml  requirements.txt  run_folder_cellphone_image.py  run_folder_chaindigger_image.py
