[project]
name = "sp-detection"
version = "0.1.0"
description = "detect sweetpotato roots from camera image"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "albumentations>=2.0.8",
    "detectron2",
    "dotenv>=0.9.9",
    "opencv-python>=4.11.0.86",
    "pandas>=2.2.3",
    "pycocotools>=2.0.8",
    "pyproj>=3.7.1",
    "scikit-learn>=1.7.1",
    "torch>=2.5.1",
    "torchaudio>=2.5.1",
    "torchvision>=0.20.1",
]

[project.optional-dependencies]
build = ["torch", "setuptools"]
compile = ["detectron2"]

[tool.uv]
no-build-isolation-package = ["detectron2"]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu118", marker = "platform_system != 'Darwin'"},
]
torchvision = [
  { index = "pytorch-cu118", marker = "platform_system != 'Darwin'"},
]
detectron2 = { git = "https://github.com/facebookresearch/detectron2.git" }

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]

